# optimum-rbln

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  golden_toy.py  pyproject.toml  toy.py  toy3.py  toy_decoder.py  toy_encoder.py  toy_enocder.py
.github/: dependabot.yaml  pull_request_template.md  renovate.json  renovate.json5  version.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  model_request.md
.github/scripts/: auto_code_review.py  parsing_latest_version.py  test_cli.py  validate_docstrings.py  validate_pr_checklist.py
.github/workflows/: auto_code_review.yml  auto_compiler_update.yaml  auto_dependency_bot.yml  check_code_quality.yml  debug.yml  deploy-on-tag.yaml  deploy.yaml  get_latest_tag.yaml  pr-title-check.yaml  pr_checklist_validator.yml  rbln_bc_compile.yaml  rbln_bc_full_inference.yaml  rbln_bc_inference.yaml  rbln_bc_target_inference.yaml  rbln_check_compiler.yaml  rbln_dispatch_pytest.yaml  rbln_optimum_full_test.yaml  rbln_optimum_inference_test.yaml  rbln_optimum_pytest.yaml  rbln_scheduled_test.yaml  rbln_trigger_on_pr.yaml  renovate_dependancy_bot.yml  test-docstrings.yml  test_bc.yaml  update-uv-lock-on-dependabot-pr.yml
examples/advanced/: configuration_colqwen2_5.py  custom_class.py  modeling_colqwen2_5.py  run_colqwen2_5.py
examples/audio-classification/: run_ast_audio_classification.py
examples/cogvideo/: run_cogvideo.py  run_cogvideo_i2v.py  run_dec_simple_cache.py  run_dec_simple_cache_0522_0.py  run_enc.py
examples/cosmos/: run_cosmos_text2world.py  run_safety_checker.py
examples/depth-estimation/: run_depth_any.py  run_dpt.py
examples/flux/: run_flux.py
examples/image-classification/: run_image_classification.py  run_vit_image_classification.py
examples/image-to-text/: clip_test.py  run_base_llava.py  run_colqwen2_5.py  run_gemma3.py  run_idefics3.py  run_llava.py  run_llava_next_image_to_text.py  run_paligemma.py
examples/kandinsky2_2/: run_kandinsky2_2.py  run_kandinsky2_2_combined.py  run_kandinsky2_2_img2img.py  run_kandinsky2_2_img2img_combined.py  run_kandinsky2_2_inpaint.py  run_kandinsky2_2_inpaint_combined.py  run_kandinsky2_2_prior_interpolate.py
examples/object-detection/: run_deformable_detr_object_detection.py  run_detr_resnet50_object_detection.py
examples/object_detection/: swin_golden.py
examples/question-answering/: run_question_answering.py
examples/speech-recognition/: run_wav2vec2.py  run_whisper.py
examples/stable-diffusion/: run_stable_diffusion.py  run_stable_diffusion_controlnet.py  run_stable_diffusion_img2img.py  run_stable_diffusion_img2img_controlnet.py  run_stable_diffusion_inpaint.py  run_stable_diffusion_lora.py  run_stable_diffusion_multicontrolnet.py
examples/stable-video-diffusion/: pytest_unet.py  run_stable_video_diffusion.py
examples/text-classification/: run_BERT_mutilingual.py  run_bge_m3_text_classification.py  run_bge_reranker_v2_m3_text_classification.py  run_secureBERT.py  run_t5_classification.py  run_twitter_roberta_text_classification.py
examples/text2text-generation/: run_bart_text2text_generation.py  run_gemma3_text2text_generation.py  run_gpt_oss.py  run_llama_multi_lora.py  run_llama_peft.py  run_llama_text2text_generation.py  run_pegasus_text2text_generation.py  run_qwen_moe.py
examples/time-series-forecasting/: compile_batch_64.py  enc_inputs  gold_time_series_forecasting.py  (+3 more)
scripts/: uv-lock.sh  uv-sync.sh  validate_docstrings.py
tests/: psnr.py  requirements_sdxl.txt  run_stable_diffusion_xl_base.py  test_base.py  test_bc.py  test_config.py  test_diffusers.py  test_llm.py  test_transformers.py
(+351 files in other folders)
